--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/david83748/casino__proj/issues"
   },
-  "homepage": "https://github.com/david83748/casino__proj#readme"
+  "homepage": "https://github.com/david83748/casino__proj#readme",
+  "devDependencies": {
+    "eslint": "^8.7.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4"
+  }
 }
